apps/clubs/capra/outlinewiki/prod/networking.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: capra-outlinewiki-httpproxy
spec:
  virtualhost:
    fqdn: wiki.capra.etsmtl.club
    tls:
      secretName: capra-outlinewiki-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: capra-outlinewiki-svc
          port: 3000
      timeoutPolicy:
        idle: 600s
        response: 600s
---
apiVersion: v1
kind: Service
metadata:
  name: capra-outlinewiki-s3
spec:
  ports:
    - name: http
      port: 7480
      targetPort: 7480
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: capra-outlinewiki-s3
  labels:
    kubernetes.io/service-name: capra-outlinewiki-s3
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 7480
endpoints:
  - addresses:
      - 10.0.21.59
    conditions:
      ready: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: capra-outlinewiki-s3-httpproxy
spec:
  virtualhost:
    fqdn: s3.capra.etsmtl.club
    tls:
      secretName: capra-outlinewiki-s3-tls
      minimumProtocolVersion: "1.3"
    corsPolicy:
      allowOrigin:
        - https://wiki.capra.etsmtl.club
      allowMethods:
        - "*"
      allowHeaders:
        - "*"
  routes:
    - conditions:
        - prefix: /
      services:
        - name: capra-outlinewiki-s3
          port: 7480
      timeoutPolicy:
        idle: 600s
        response: 600s
